# open-sales-tax

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  NOTICE  README.md  USERS.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: adopt-a-state.yml  config.yml  rate-correction.yml
.github/workflows/: build-data-dump.yml  ci.yml
docs/: api.md  contributing-without-code.md  data-refresh.md  disclaimer.md  quickstart.md  state-modules.md
docs/legislation/: README.md  shipping-taxability.md  sst-file-format.md
scripts/: audit_district_code_bindings.py  extract_al_county_rates.py  extract_il_county_rates.py  extract_mo_county_rates.py  mn_metro_smoke.sh  regen_county_names.py  regen_zip_county.py  regen_zip_state.py  sst_state_expected.sh  sst_state_smoke.sh
specs/: NEXT-SESSION-KICKOFF.md  README.md  constitution.md  current-state.md  handoff.md
specs/agent-briefs/: multi-agent-coordination.md  per-state-research-brief.md
specs/captain-requests/: error-envelope-migration-investigation.md
specs/decisions/: 01-language-framework.md  02-license.md  03-database.md  04-colorado-home-rule.md  05-louisiana-parishes.md  06-additional-tax-types.md  06-calculation-only-positioning.md  07-wyoming-multi-row-counties.md  08-vt-address-record-format.md  09-strict-lookup-typez-dedup.md  10-wide-range-type4-precise-match.md
specs/findings/: asyncmy-sqli-pysec-2026-286.md  hi-maui-county-surcharge-2026-07.md  ia-west-des-moines-lost-dedup-2026-07.md  mn-meeker-county-zip-attribution-2026-07.md  mn-transit-district-cross-county-leak.md  nm-bernalillo-rate-change-2026-07.md  ny-westchester-noncity-undercollection-2026-07.md  ok-bixby-dualcode-edmond-logan-2026-07.md  pr-prepared-food-reduced-7pct-2026-07.md  sst-source-file-quirks.md  ut-zip4-0001-county-drop-2026-06.md
specs/phase-1-foundation/: acceptance-walkthrough.md  plan.md  spec.md  tasks.md
specs/phase-2-loader/: spec.md
specs/phase-shipping-p1/: plan.md
specs/research/: canada-sources.md  data-sources.md  prior-art.md  references.md  shipping-taxability.md  sovos-state-summary.md  sovos-state-summary.tsv  specialty-tax-types.md  sst-file-format.md  state-coverage.md
specs/security/: audit-2026-05-04.md  audit-2026-05-19.md
src/opensalestax/: __init__.py  __main__.py  app.py  auth.py  settings.py
src/opensalestax/cli/: main.py
src/opensalestax/core/: __init__.py  calculate.py  coverage.py  disclaimer.py  lookup.py  resolve.py
src/opensalestax/data/: __init__.py  sst.py  (+9 more)
tests/: conftest.py  test_smoke.py
tests/integration/: test_api.py  test_auth.py  test_calculate_end_to_end.py  test_loader.py  test_loader_california.py  test_sst_dor_validation.py
tests/unit/: test_app_security.py  test_auth_helpers.py  test_core_calculate_validation.py  test_core_coverage.py  test_core_disclaimer.py  test_core_shipping.py  test_data_restore.py  test_db_session.py  test_holidays.py  test_loader_pure.py  test_models_metadata.py  test_phase_3_states.py  test_phase_4_states.py  test_settings.py  test_sst.py  test_sst_base_boundary_filter.py  test_sst_parser.py  test_state_alabama.py  test_state_alaska.py  test_state_arkansas.py  test_state_california.py  test_state_colorado.py  test_state_connecticut.py  test_state_district_of_columbia.py  test_state_florida.py  test_state_georgia.py  test_state_hawaii.py  test_state_idaho.py  test_state_illinois.py  test_state_indiana.py  test_state_iowa.py  test_state_kansas.py  test_state_kentucky.py  test_state_louisiana.py  test_state_maine.py  test_state_michigan.py  test_state_minnesota.py  test_state_mississippi.py  test_state_missouri.py  test_state_names_invariants.py  (+28 more)
(+131 files in other folders)
